force-app/main/default/objects/Account/fields/FS_Bypass_Order_Delivery_Mthd_validation__c.field-meta.xml
<CustomField>
    <fullName>FS_Bypass_Order_Delivery_Mthd_validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Order &amp; Delivery Mthd validation</label>
    <type>Checkbox</type>
</CustomField>