force-app/main/default/objects/Account/fields/FS_Cartridge_Type_Available_Delivery_For__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Type_Available_Delivery_For__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(IF( INCLUDES( FS_Distributor__r.FS_Cartridge_Type_Available_for_Delivery__c , &quot;6000 Platform&quot;), &quot;6000 Platform; &quot; , NULL)+
IF( INCLUDES( FS_Distributor__r.FS_Cartridge_Type_Available_for_Delivery__c , &quot;6050 Platform&quot;), &quot;6050 Platform; &quot; , NULL)+
IF( INCLUDES( FS_Distributor__r.FS_Cartridge_Type_Available_for_Delivery__c , &quot;7000 Platform&quot;), &quot;7000 Platform; &quot; , NULL)+
IF( INCLUDES( FS_Distributor__r.FS_Cartridge_Type_Available_for_Delivery__c , &quot;7100 Platform&quot;), &quot;7100 Platform; &quot; , NULL)+
IF( INCLUDES( FS_Distributor__r.FS_Cartridge_Type_Available_for_Delivery__c , &quot;8000 Platform&quot;), &quot;8000 Platform; &quot; , NULL)+
IF( INCLUDES( FS_Distributor__r.FS_Cartridge_Type_Available_for_Delivery__c , &quot;9000 Platform&quot;), &quot;9000 Platform; &quot; , NULL)+
IF( INCLUDES( FS_Distributor__r.FS_Cartridge_Type_Available_for_Delivery__c , &quot;9100 Platform&quot;), &quot;9100 Platform; &quot; , NULL)+&quot;.&quot;,&quot;; .&quot;, NULL),&quot;.&quot;,NULL)</formula>
    <label>Cartridge Type Available for Delivery</label>
    <type>Text</type>
</CustomField>