force-app/main/default/objects/Account/fields/FS_Cartridge_Type_Available_for_Delivery__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Type_Available_for_Delivery__c</fullName>
    <description>this will be of multi select picklist type (values will be 6000 Platform,6050 Platform,7000 Platform, 8000 Platform, 9000 Platform,9100 Platform)</description>
    <label>Cartridge Type Available for Delivery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6000 Platform</fullName>
            </value>
            <value>
                <fullName>7000 Platform</fullName>
            </value>
            <value>
                <fullName>7100 Platform</fullName>
            </value>
            <value>
                <fullName>8000 Platform</fullName>
            </value>
            <value>
                <fullName>9000 Platform</fullName>
            </value>
            <value>
                <fullName>9100 Platform</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>