force-app/main/default/objects/Account/fields/FS_Chain_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Chain_ACN__c</fullName>
    <formula>FS_Chain__r.FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chain ACN</label>
    <type>Text</type>
</CustomField>