force-app/main/default/objects/Account/fields/FS_Cokesmart_Registration_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>FS_Cokesmart_Registration_Email_Sent__c</fullName>
    <label>Cokesmart Registration Email Sent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notification #1 sent</fullName>
            </value>
            <value>
                <fullName>Notification #1 and 2 sent</fullName>
            </value>
            <value>
                <fullName>Notification #1 and 2 and 3 sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>