force-app/main/default/objects/Account/fields/FS_COM__c.field-meta.xml
<CustomField>
    <fullName>FS_COM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>