force-app/main/default/objects/Account/fields/FS_COM_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_COM_Email__c</fullName>
    <formula>FS_COM__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COM Email</label>
    <type>Text</type>
</CustomField>