force-app/main/default/objects/Account/fields/FS_COM_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_COM_Phone__c</fullName>
    <formula>FS_COM__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COM Phone</label>
    <type>Text</type>
</CustomField>