force-app/main/default/objects/Account/fields/FS_Concatenated_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Concatenated_Address__c</fullName>
    <formula>if(LEN(FS_Store_Number__c)&gt;0, FS_Store_Number__c&amp; &quot;, &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(ShippingStreet)&gt;0, ShippingStreet&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(ShippingCity)&gt;0, ShippingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(ShippingState)&gt;0, ShippingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(ShippingPostalCode)&gt;0, ShippingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(ShippingCountry) &gt;0, ShippingCountry,&quot;&quot;) &amp; BR() &amp;
If(LEN(Phone) &gt;0, Phone,&quot;&quot;)</formula>
    <label>Concatenated Address</label>
    <type>Text</type>
</CustomField>