force-app/main/default/objects/Account/fields/FS_Confirm_Tax_Exemption_Obtain__c.field-meta.xml
<CustomField>
    <fullName>FS_Confirm_Tax_Exemption_Obtain__c</fullName>
    <label>Confirm Tax Exemption Info Obtained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>