force-app/main/default/objects/Account/fields/FS_Corporate_VS_Franchise__c.field-meta.xml
<CustomField>
    <fullName>FS_Corporate_VS_Franchise__c</fullName>
    <label>Corporate VS Franchise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>