force-app/main/default/objects/Account/fields/FS_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>FS_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>