force-app/main/default/objects/Account/fields/FS_Count_Total_number_of_Dispensaries__c.field-meta.xml
<CustomField>
    <fullName>FS_Count_Total_number_of_Dispensaries__c</fullName>
    <label>Count Total number of Dispensers</label>
    <summaryFilterItems>
        <field>FS_Outlet_Dispenser__c.FS_IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FS_Outlet_Dispenser__c.FS_Outlet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>