force-app/main/default/objects/Account/fields/FS_Country_Key__c.field-meta.xml
<CustomField>
    <fullName>FS_Country_Key__c</fullName>
    <description>SAP Integration</description>
    <label>Country Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>