force-app/main/default/objects/Account/fields/FS_CS_All_Ftn_Removed__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_All_Ftn_Removed__c</fullName>
    <label>CS All Ftn Removed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>