force-app/main/default/objects/Account/fields/FS_CS_All_FTN_Removed_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_All_FTN_Removed_Time__c</fullName>
    <formula>FS_Max_Installation_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS All FTN Removed Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>