force-app/main/default/objects/Account/fields/FS_CS_Assigned_To_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Assigned_To_ID__c</fullName>
    <label>CS Assigned To ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>