force-app/main/default/objects/Account/fields/FS_CS_Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Bill_To_Address__c</fullName>
    <label>CS Bill To Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>