force-app/main/default/objects/Account/fields/FS_CS_Bill_To_Country__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Bill_To_Country__c</fullName>
    <label>CS Bill To Country</label>
    <length>64</length>
    <type>Text</type>
</CustomField>