force-app/main/default/objects/Account/fields/FS_CS_Bill_To_Zip__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Bill_To_Zip__c</fullName>
    <label>CS Bill To Zip</label>
    <length>16</length>
    <type>Text</type>
</CustomField>