force-app/main/default/objects/Account/fields/FS_CS_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Payment_Method__c</fullName>
    <formula>TEXT(FS_Headquarters__r.Cokesmart_Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cokesmart/Cartridge Payment Method</label>
    <type>Text</type>
</CustomField>