force-app/main/default/objects/Account/fields/FS_CS_Route_To_Market__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Route_To_Market__c</fullName>
    <formula>&quot;Method 2: Cust orders cartridges thru KO and BIB thru their distributor&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route To Market</label>
    <type>Text</type>
</CustomField>