force-app/main/default/objects/Account/fields/FS_CS_State__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_State__c</fullName>
    <label>CS Bill To State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>