force-app/main/default/objects/Account/fields/FS_CS_Sub_Trade_Channel__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Sub_Trade_Channel__c</fullName>
    <label>Sub-Trade Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>009 - Chain Discount Drug Store</fullName>
            </value>
            <value>
                <fullName>010 - Conventional Independent Drug Store</fullName>
            </value>
            <value>
                <fullName>013 - QSR-Hamburger</fullName>
            </value>
            <value>
                <fullName>014 - QSR-Pizza</fullName>
            </value>
            <value>
                <fullName>015 - QSR-Chicken</fullName>
            </value>
            <value>
                <fullName>016 - QSR-Mexican</fullName>
            </value>
            <value>
                <fullName>017 - QSR-Sandwich</fullName>
            </value>
            <value>
                <fullName>018 - Hotel/Motel/Resort/Inn</fullName>
            </value>
            <value>
                <fullName>019 - Military - U.S. - Commissary</fullName>
            </value>
            <value>
                <fullName>021 - Military - U.S. - Exchange</fullName>
            </value>
            <value>
                <fullName>022 - Military - U.S. - Other</fullName>
            </value>
            <value>
                <fullName>023 - Primary School</fullName>
            </value>
            <value>
                <fullName>024 - Middle School</fullName>
            </value>
            <value>
                <fullName>026 - Secondary/High School</fullName>
            </value>
            <value>
                <fullName>027 - Cinema/Movie</fullName>
            </value>
            <value>
                <fullName>028 - Chain Supermarket</fullName>
            </value>
            <value>
                <fullName>033 - Independent Supermarket</fullName>
            </value>
            <value>
                <fullName>101 - Other Supermarket</fullName>
            </value>
            <value>
                <fullName>102 - Chain Convenience Store</fullName>
            </value>
            <value>
                <fullName>103 - Independent Convenience Store</fullName>
            </value>
            <value>
                <fullName>104 - Other Convenience Store</fullName>
            </value>
            <value>
                <fullName>105 - Butcher Shop</fullName>
            </value>
            <value>
                <fullName>106 - Bakery</fullName>
            </value>
            <value>
                <fullName>107 - Delicatessen</fullName>
            </value>
            <value>
                <fullName>108 - Health Food Store</fullName>
            </value>
            <value>
                <fullName>109 - Produce Stand</fullName>
            </value>
            <value>
                <fullName>110 - Other Specialty Food Store</fullName>
            </value>
            <value>
                <fullName>111 - Box Store</fullName>
            </value>
            <value>
                <fullName>112 - Other Discount Grocery</fullName>
            </value>
            <value>
                <fullName>113 - Mom &amp; Pop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>