force-app/main/default/objects/Account/fields/FS_CS_Sub_Trade_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Sub_Trade_Channel_Name__c</fullName>
    <label>Sub-Trade Channel Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chain Discount Drug Store</fullName>
            </value>
            <value>
                <fullName>Conventional Independent Drug Store</fullName>
            </value>
            <value>
                <fullName>QSR-Hamburger</fullName>
            </value>
            <value>
                <fullName>QSR-Pizza</fullName>
            </value>
            <value>
                <fullName>QSR-Chicken</fullName>
            </value>
            <value>
                <fullName>QSR-Mexican</fullName>
            </value>
            <value>
                <fullName>QSR-Sandwich</fullName>
            </value>
            <value>
                <fullName>Hotel/Motel/Resort/Inn</fullName>
            </value>
            <value>
                <fullName>Military - U.S. - Commissary</fullName>
            </value>
            <value>
                <fullName>Military - U.S. - Exchange</fullName>
            </value>
            <value>
                <fullName>Military - U.S. - Other</fullName>
            </value>
            <value>
                <fullName>Primary School</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>Secondary/High School</fullName>
            </value>
            <value>
                <fullName>Cinema/Movie</fullName>
            </value>
            <value>
                <fullName>Chain Supermarket</fullName>
            </value>
            <value>
                <fullName>Independent Supermarket</fullName>
            </value>
            <value>
                <fullName>Other Supermarket</fullName>
            </value>
            <value>
                <fullName>Chain Convenience Store</fullName>
            </value>
            <value>
                <fullName>Independent Convenience Store</fullName>
            </value>
            <value>
                <fullName>Other Convenience Store</fullName>
            </value>
            <value>
                <fullName>Butcher Shop</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Delicatessen</fullName>
            </value>
            <value>
                <fullName>Health Food Store</fullName>
            </value>
            <value>
                <fullName>Produce Stand</fullName>
            </value>
            <value>
                <fullName>Other Specialty Food Store</fullName>
            </value>
            <value>
                <fullName>Box Store</fullName>
            </value>
            <value>
                <fullName>Other Discount Grocery</fullName>
            </value>
            <value>
                <fullName>Mom &amp; Pop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>