force-app/main/default/objects/Account/fields/FS_Cust_Term_Ind__c.field-meta.xml
<CustomField>
    <fullName>FS_Cust_Term_Ind__c</fullName>
    <description>CCM Field</description>
    <label>Cust Term Ind</label>
    <type>TextArea</type>
</CustomField>