force-app/main/default/objects/Account/fields/FS_Customer_CCR_Trained_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_CCR_Trained_Date__c</fullName>
    <label>Customer CCR Trained - Modified Time</label>
    <type>DateTime</type>
</CustomField>