force-app/main/default/objects/Account/fields/FS_Customer_Classification_Description__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Classification_Description__c</fullName>
    <description>SAP data</description>
    <inlineHelpText>SAP data</inlineHelpText>
    <label>Customer Classification Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>