force-app/main/default/objects/Account/fields/FS_Customer_Registered_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Registered_By__c</fullName>
    <label>Customer Registered - Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>