force-app/main/default/objects/Account/fields/FS_Customer_Registration_User__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Registration_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Registration User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>