force-app/main/default/objects/Account/fields/FS_Customer_Support_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Support_Status__c</fullName>
    <formula>If( AND(FS_Customer_Registration__c ,OR( FS_Customer_Trained__c , FS_Customer_Self_Trained__c )),&quot;Complete&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Support Status</label>
    <type>Text</type>
</CustomField>