force-app/main/default/objects/Account/fields/FS_Customer_Trained__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Trained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer CCR Trained</label>
    <type>Checkbox</type>
</CustomField>