force-app/main/default/objects/Account/fields/FS_Customer_Trained_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Trained_Date__c</fullName>
    <label>Customer Trained Date</label>
    <type>Date</type>
</CustomField>