force-app/main/default/objects/Account/fields/FS_CY_Aug__c.field-meta.xml
<CustomField>
    <fullName>FS_CY_Aug__c</fullName>
    <label>CY Aug</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>