force-app/main/default/objects/Account/fields/FS_CY_Total_Plan__c.field-meta.xml
<CustomField>
    <fullName>FS_CY_Total_Plan__c</fullName>
    <formula>FS_CY_Apr__c + FS_CY_Aug__c+FS_CY_Dec__c+FS_CY_Feb__c+FS_CY_Jan__c+FS_CY_Jul__c+FS_CY_Jun__c+FS_CY_Mar__c+FS_CY_May__c+FS_CY_Nov__c+FS_CY_Oct__c+FS_CY_Sep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Plan Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>