force-app/main/default/objects/Account/fields/FS_DAE__c.field-meta.xml
<CustomField>
    <fullName>FS_DAE__c</fullName>
    <formula>&#39;DAE&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DAE</label>
    <type>Text</type>
</CustomField>