force-app/main/default/objects/Account/fields/FS_DataHashCode__c.field-meta.xml
<CustomField>
    <fullName>FS_DataHashCode__c</fullName>
    <label>DataHashCode</label>
    <length>64</length>
    <type>Text</type>
</CustomField>