force-app/main/default/objects/Account/fields/FS_DefaultMigrated__c.field-meta.xml
<CustomField>
    <fullName>FS_DefaultMigrated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FS_DefaultMigrated</label>
    <type>Checkbox</type>
</CustomField>