force-app/main/default/objects/Account/fields/FS_Dist_Bottler_Handling_Initial_Order__c.field-meta.xml
<CustomField>
    <fullName>FS_Dist_Bottler_Handling_Initial_Order__c</fullName>
    <label>Is Distr/Bottler Handling Initial Order?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>