force-app/main/default/objects/Account/fields/FS_Dist_Cartridge_Delivery_Auth_Outlet__c.field-meta.xml
<CustomField>
    <fullName>FS_Dist_Cartridge_Delivery_Auth_Outlet__c</fullName>
    <formula>TEXT(FS_Distributor__r.FS_Dist_Cartridge_Delivery_Authorized__c)



/*TEXT( FS_Dist_Cartridge_Delivery_Authorized__c )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dist Cartridge Delivery Authorized</label>
    <type>Text</type>
</CustomField>