force-app/main/default/objects/Account/fields/FS_Dist_Cartridge_Delivery_Authorized__c.field-meta.xml
<CustomField>
    <fullName>FS_Dist_Cartridge_Delivery_Authorized__c</fullName>
    <label>Dist Cartridge Delivery Authorized</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>