force-app/main/default/objects/Account/fields/FS_Dist_Set_up_by_NDT__c.field-meta.xml
<CustomField>
    <fullName>FS_Dist_Set_up_by_NDT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dist Set-up by NDT</label>
    <type>Checkbox</type>
</CustomField>