force-app/main/default/objects/Account/fields/FS_Distr_ACN_Ship_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Distr_ACN_Ship_City__c</fullName>
    <formula>FS_Distributor__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distr ACN Ship City</label>
    <type>Text</type>
</CustomField>