force-app/main/default/objects/Account/fields/FS_Distr_ACN_Ship_State__c.field-meta.xml
<CustomField>
    <fullName>FS_Distr_ACN_Ship_State__c</fullName>
    <formula>FS_Distributor__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distr ACN Ship State</label>
    <type>Text</type>
</CustomField>