force-app/main/default/objects/Account/fields/FS_Distr_ACN_Ship_Street__c.field-meta.xml
<CustomField>
    <fullName>FS_Distr_ACN_Ship_Street__c</fullName>
    <formula>FS_Distributor__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distr ACN Ship Street</label>
    <type>Text</type>
</CustomField>