force-app/main/default/objects/Account/fields/FS_Distr_ACN_Ship_Zip__c.field-meta.xml
<CustomField>
    <fullName>FS_Distr_ACN_Ship_Zip__c</fullName>
    <formula>FS_Distributor__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distr ACN Ship Zip</label>
    <type>Text</type>
</CustomField>