force-app/main/default/objects/Account/fields/FS_Distributor__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field created 10/23/13 by H.Whitacre to support Distributor migration. Lookup points to the Distributor for the given outlet. (Looking at an Outlet, the Distributor field references the Distributor for that outlet.) NOTE that this field acts separately from the Outlet-Distributor junction.</description>
    <inlineHelpText>The initial Distributor for outlets with new installations.</inlineHelpText>
    <label>Distributor/Bottler</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Distributor</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>API User, MDM API User</value>
        </filterItems>
        <infoMessage>Choose the initial Distributor for this Outlet</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outlets (Primary Distributor)</relationshipLabel>
    <relationshipName>Outlets</relationshipName>
    <type>Lookup</type>
</CustomField>